# mtcli-risco

./: .gitignore  .readthedocs.yaml  README.md  make.bat  mkdocs.yml  pyproject.toml
.github/workflows/: tests.yml
docs/: api.md  index.md  requirements.txt  usage.md
mtcli_risco/: checar.py  cli.py  conf.py  lucro.py  monitor.py  monitorar.py  mt5_context.py  plugin.py  risco.py
mtcli_risco/commands/: __init__.py  checar.py  lucro.py  monitorar.py  operar.py  panic.py  trades.py
mtcli_risco/models/: checar.py  checar_model.py  hardstop_model.py  lucro.py  operar.py  panic_model.py  risco.py  trades.py  trades_model.py
tests/: conftest.py  test_checar_cli.py  test_checar_model.py  test_monitorar_cli.py  test_plugin_cli.py  test_risco.py  teste_plugin.py
