[project]
name = "mtcli-risco"
version = "2.2.0.dev0"
description = "Plugin mtcli para controle de loss diário"
authors = [
    {name = "Valmir França da Silva",email = "vfranca3@gmail.com"}
]
readme = "README.md"
license = "GPL-3.0"
requires-python = ">=3.10,<3.14"
dependencies = [
    "mtcli>=1.18.1"
]

[project.urls]
homepage = "https://github.com/vfranca/mtcli-risco"
documentation = "https://mtcli-risco.readthedocs.io"
repository = "https://github.com/vfranca/mtcli-risco"
issues = "https://github.com/vfranca/mtcli-risco/issues"

[project.entry-points."mtcli.plugins"]
mtcli_risco = "mtcli_risco.plugin:cli"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.4.1"
pytest-cov = "^7.0.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.15"
mkdocs-material-extensions = "^1.3"
pymdown-extensions = "^10.7"
